wrap nav tag in body-resolve parcel compile issue

--- a/projects/first-paint/components/nav.scss
+++ b/projects/first-paint/components/nav.scss
@@ -1,3 +1,6 @@
 @import "~@shawnsandy/mix/sass/foundations/_settings.scss";
 @import "@shawnsandy/mix/sass/foundations/_nav.scss";
-@include mix-nav();
+
+body {
+  @include mix-nav();
+}
